# iksemel

./: .gitignore  AUTHORS  ChangeLOG  ChangeLog  ChangeLog.OLD  HACKING  Makefile.am  NEWS  ProjectHome.md  README  README.md  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt  pyiks.err  setup.py
include/: common.h  config.h.meson  iksemel.h  meson.build
python/: Makefile.am  document.c  document.h  exceptions.c  exceptions.h  jid.c  jid.h  meson.build  node.c  node.h  pyiksemel.c  reference.c  reference.h  stream.c  stream.h  xml.c
python/test/: manipulation.py  runtests.py  stream.py  traversal.py  tst_attributes.py  tst_iteration.py  tst_jid.py
src/: Makefile.am  base64.c  dom.c  iks.c  iksemel.c  iksemel.h  ikstack.c  io-posix.c  jabber.c  md5.c  meson.build  pyiks.c  pyiks3.c  sax.c  stream.c  tls-gnutls.c  tls-openssl.c  utility.c
test/: tst-dom.c  tst-filter.c  tst-iks.c  tst-ikstack.c  tst-jid.c  tst-md5.c  tst-sax.c  tst-sha.c
tests/: attibutes.py  generate.py  iteration.py  root.py  traverse.py
tools/: hash.c  ikslint.c  iksperf.c  iksroster.c  perf.c  perf.h
