sources = [
            'ikstack.c',
            'utility.c',
            'iks.c',
            'sax.c',
            'dom.c',
            'stream.c',
            #'tls-gnutls.c',
            #'tls-openssl.c',
            'sha.c',
            'jabber.c',
            'filter.c',
            'md5.c',
            'base64.c',
           ]

libiksemel = shared_library('libiksemel',
                        sources,
                        include_directories : include_dir,
                        #dependencies : python_dep,
                        install : true)
